fix spacing around anchor list

--- a/app/assets/stylesheets/components/_drs-buttons.scss
+++ b/app/assets/stylesheets/components/_drs-buttons.scss
@@ -122,6 +122,10 @@ a[data-toggle="ellipsis"]:hover, a[data-toggle="ellipsis"]:focus{
   text-decoration:none;
 }
 
+
+.alpha_list{
+  padding-bottom:12px;
+}
 .alpha_list .btn-group{
   white-space: normal;
   .btn-clear.disabled, .btn-clear.disabled:hover, .btn-clear.disabled:focus{
